--- a/viz/specs/animation/in.yaml
+++ b/viz/specs/animation/in.yaml
@@ -7,7 +7,13 @@ screen:
   height: 1080
   backgroundColor: '#000000'
 
-presets: {}
+presets:
+  bj342s:
+    name: Read
+    eventsMap:
+      LeftClick:
+        systemInstructions:
+          nextStep: {}
 
 resources:
   backgrounds:
@@ -38,6 +44,7 @@ resources:
               easing: linear
 story:
   initialSceneId: ajfl3a
+  initialPresetId: bj342s
   scenes:
     ajfl3a:
       name: Scene 1
@@ -47,13 +54,13 @@ story:
           name: Section 1
           steps:
             - id: step1
-              actions:
+              presentation:
                 background:
                   backgroundId: alkejf3la
                   animations:
                     in: 3lkj289
             - id: step2
-              actions:
+              presentation:
                 background:
                   animations:
                     out: 8h3js
