--- a/viz/specs/character/basic.yaml
+++ b/viz/specs/character/basic.yaml
@@ -7,7 +7,13 @@ screen:
   height: 1080
   backgroundColor: '#000000'
 
-presets: {}
+presets:
+  bj342s:
+    name: Read
+    eventsMap:
+      LeftClick:
+        systemInstructions:
+          nextStep: {}
 
 resources:
   backgrounds:
@@ -45,6 +51,7 @@ resources:
 
 story:
   initialSceneId: ajfl3a
+  initialPresetId: bj342s
   scenes:
     ajfl3a:
       name: Scene 1
@@ -54,7 +61,7 @@ story:
           name: Section 1
           steps:
             - id: step1
-              actions:
+              presentation:
                 background:
                   backgroundId: alkejf3la
                 character:
