--- a/viz/specs/choice/basic.yaml
+++ b/viz/specs/choice/basic.yaml
@@ -7,7 +7,13 @@ screen:
   height: 1080
   backgroundColor: '#000000'
 
-presets: {}
+presets:
+  bj342s:
+    name: Read
+    eventsMap:
+      LeftClick:
+        systemInstructions:
+          nextStep: {}
 
 ui:
   screens:
@@ -36,6 +42,7 @@ ui:
 
 story:
   initialSceneId: ajfl3a
+  initialPresetId: bj342s
   scenes:
     ajfl3a:
       name: Scene 1
@@ -45,7 +52,7 @@ story:
           name: Section 1
           steps:
             - id: step1
-              actions:
+              presentation:
                 choices:
                   choiceScreenId: fi3l
                   items:
