--- a/viz/specs/dialogue/basic.yaml
+++ b/viz/specs/dialogue/basic.yaml
@@ -7,7 +7,13 @@ screen:
   height: 1080
   backgroundColor: '#000000'
 
-presets: {}
+presets:
+  bj342s:
+    name: Read
+    eventsMap:
+      LeftClick:
+        systemInstructions:
+          nextStep: {}
 
 ui:
   screens:
@@ -39,6 +45,7 @@ resources:
 
 story:
   initialSceneId: ajfl3a
+  initialPresetId: bj342s
   scenes:
     ajfl3a:
       name: Scene 1
@@ -48,7 +55,7 @@ story:
           name: Section 1
           steps:
             - id: step1
-              actions:
+              presentation:
                 dialogue:
                   dialogueBoxId: fi3l
                   mode: dialogue
