--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "test": "vitest run",
     "test:watch": "vitest",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "vt:generate": "rtgl vt generate --skip-screenshots"
   },
   "dependencies": {
     "immer": "^10.1.1",
