--- a/vt/specs/background/animation.yaml
+++ b/vt/specs/background/animation.yaml
@@ -13,7 +13,7 @@ presets:
     eventsMap:
       LeftClick:
         systemInstructions:
-          nextStep: {}
+          nextLine: {}
 
 
 resources:
@@ -54,14 +54,14 @@ story:
       sections:
         l3kjfawelf:
           name: Section 1
-          steps:
-            - id: step1
+          lines:
+            - id: line1
               presentation:
                 background:
                   backgroundId: alkejf3la
                   animations:
                     in: 3lkj289
-            - id: step2
+            - id: line2
               presentation:
                 background:
                   animations:
