--- a/vt/specs/background/backgroundId.yaml
+++ b/vt/specs/background/backgroundId.yaml
@@ -13,7 +13,7 @@ presets:
     eventsMap:
       LeftClick:
         systemInstructions:
-          nextStep: {}
+          nextLine: {}
 
 resources:
   backgrounds:
@@ -34,16 +34,16 @@ story:
       sections:
         l3kjfawelf:
           name: Section 1
-          steps:
-            - id: step1
+          lines:
+            - id: line1
               presentation:
                 background:
                   backgroundId: alkejf3la
-            - id: step2
+            - id: line2
               presentation:
                 background:
                   backgroundId: 8a3lkja
-            - id: step3
+            - id: line3
               presentation:
                 background:
                   backgroundId: 3ljdasfjlk32
