--- a/vt/specs/character/basic.yaml
+++ b/vt/specs/character/basic.yaml
@@ -13,7 +13,7 @@ presets:
     eventsMap:
       LeftClick:
         systemInstructions:
-          nextStep: {}
+          nextLine: {}
 
 resources:
   backgrounds:
@@ -59,8 +59,8 @@ story:
       sections:
         l3kjfawelf:
           name: Section 1
-          steps:
-            - id: step1
+          lines:
+            - id: line1
               presentation:
                 background:
                   backgroundId: alkejf3la
