--- a/vt/specs/choice/basic.yaml
+++ b/vt/specs/choice/basic.yaml
@@ -13,7 +13,7 @@ presets:
     eventsMap:
       LeftClick:
         systemInstructions:
-          nextStep: {}
+          nextLine: {}
 
 ui:
   screens:
@@ -50,8 +50,8 @@ story:
       sections:
         l3kjfawelf:
           name: Section 1
-          steps:
-            - id: step1
+          lines:
+            - id: line1
               presentation:
                 choices:
                   choiceScreenId: fi3l
