--- a/vt/specs/goToSceneSection/basic.yaml
+++ b/vt/specs/goToSceneSection/basic.yaml
@@ -16,7 +16,7 @@ presets:
     eventsMap:
       LeftClick:
         systemInstructions:
-          nextStep: {}
+          nextLine: {}
 
 resources:
   backgrounds:
@@ -37,19 +37,19 @@ story:
       sections:
         l3kjfawelf:
           name: Section 1
-          steps:
-            - id: step1
+          lines:
+            - id: line1
               presentation:
                 background:
                   backgroundId: alkejf3la
-            - id: step2
+            - id: line2
               presentation:
                 goToSectionScene:
                   sectionId: 3k3s9sd
         3k3s9sd:
           name: Section 2
-          steps:
-            - id: step1
+          lines:
+            - id: line1
               presentation:
                 background:
                   backgroundId: 8a3lkja
