--- a/vt/specs/screen/basic.yaml
+++ b/vt/specs/screen/basic.yaml
@@ -13,7 +13,7 @@ presets:
     eventsMap:
       LeftClick:
         systemInstructions:
-          nextStep: {}
+          nextLine: {}
 
 ui:
   screens:
@@ -66,8 +66,8 @@ story:
       sections:
         l3kjfawelf:
           name: Section 1
-          steps:
-            - id: step1
+          lines:
+            - id: line1
               presentation:
                 screen:
                   id: 3k3k38
