--- a/vt/specs/visual/position.yaml
+++ b/vt/specs/visual/position.yaml
@@ -35,14 +35,14 @@ story:
       sections:
         l3kjfawelf:
           name: Section 1
-          steps:
-            - id: step1
+          lines:
+            - id: line1
               presentation:
                 visual:
                   items:
                     - visualId: alkejf3la
                       positionId: iasdlf
-            - id: step2
+            - id: line2
               presentation:
                 visual:
                   items:
