--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ sample/renderer.js
 engine3/coverage
 vt/static/RouteEngine.js
 vt/static/RouteEngine.js.map
+vt/static/renderer.js
 .claude
 .rettangoli
 
