--- a/vt/specs/background/animation.yaml
+++ b/vt/specs/background/animation.yaml
@@ -12,7 +12,7 @@ presets:
     name: Read
     eventsMap:
       LeftClick:
-        systemInstructions:
+        systemActions:
           nextLine: {}
 
 
