--- a/vt/specs/background/backgroundId.yaml
+++ b/vt/specs/background/backgroundId.yaml
@@ -1,18 +1,17 @@
 ---
-title: 'Sample'
+title: "Sample"
 ---
-
 screen:
   width: 1920
   height: 1080
-  backgroundColor: '#000000'
+  backgroundColor: "#000000"
 
 presets:
   bj342s:
     name: Read
     eventsMap:
       LeftClick:
-        systemInstructions:
+        systemActions:
           nextLine: {}
 
 resources:
