--- a/vt/specs/goToSceneSection/basic.yaml
+++ b/vt/specs/goToSceneSection/basic.yaml
@@ -15,7 +15,7 @@ presets:
     name: Read
     eventsMap:
       LeftClick:
-        systemInstructions:
+        systemActions:
           nextLine: {}
 
 resources:
