--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:watch": "vitest",
     "build": "bun run esbuild.js",
     "coverage": "vitest run --coverage",
-    "vt:generate": "rtgl vt generate --skip-screenshots"
+    "vt:generate": "bun run esbuild.js && rtgl vt generate --skip-screenshots"
   },
   "dependencies": {
     "immer": "^10.1.1",
